Fixing alignment in media query section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -110,10 +110,17 @@ input:focus{
 }
 @media only screen and (max-width: 850px){
     .top{
+        display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
-        padding:20px;
+        text-align: center;
+        padding:20vw 30vh;
+    }
+    .top .logo,.info{
+        padding-right: 0;
+        margin-right: 0;
+        width: 100%;
         text-align: center;
     }
 }
